scroll to top button z-index fix

--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,7 @@ body{
     color: #fff;
     padding: 5px 10px;
     background: #32c5d2;
+    z-index: 1;
     
 }
 
@@ -134,16 +135,9 @@ a:hover{
 }
 
 
-
-
-
 section{
 	padding: 60px 0;
 	overflow-x: hidden;
-}
-
-.bg-custom{
-	background: #EDEFF6;
 }
 
 .section-heading{
@@ -152,6 +146,10 @@ section{
 
 .section-heading h3{
 	text-transform: uppercase;
+}
+
+.bg-custom{
+	background: #EDEFF6;
 }
 
 .line{
